# ot2_scripts

./: pyproject.toml
src/labware/: stagetip_adapter_stack.json
src/ot2_scripts/scripts/: bca_pierce.py  bca_pierce_pipetting_benchmark.py  tip_eluter_poc.py
src/scripts/: bca_pierce.py  evotip_loader.py  parameters.py  push.py  tip_eluter_poc.py
