[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ot2_scripts"
version = "0.1.0"
description = "Functions and scripts for lab OT-2"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "J Rytved, email = "pkq467@ku.dk"}
]

dependencies = [
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]

